--- a/metadata.yaml
+++ b/metadata.yaml
@@ -30,6 +30,7 @@ subjects:
 - !lcsh 'Household employees -- Fiction'
 - !lcsh 'Cooks -- Fiction'
 - !lcsh 'Married people -- Fiction'
+- GITenberg
 title: 'Wanted: A Cook
 
   Domestic Dialogues'
